2005-04-12  Ulrich Weigand  <uweigand@de.ibm.com>

	PR middle-end/20917
	* gcc.dg/20050409-1.c: New test.

2005-04-10  Mark Mitchell  <mark@codesourcery.com>

	* g++.dg/warn/Wdtor1.C: Declare template in system header with
	explicit C++ linkage.

2005-04-09  Jakub Jelinek  <jakub@redhat.com>

	PR target/20795
	* g++.dg/abi/param2.C: New test.

2005-04-08  Mark Mitchell  <mark@codesourcery.com>

	PR c++/20905
	* g++.dg/parse/cond2.C: New test.

2005-04-08  Mark Mitchell  <mark@codesourcery.com>

	PR c++/20145
	* g++.dg/warn/Wdtor1.C: New test.

2005-04-08  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/17229
	* gfortran.dg/pr17229.f: New test.

2005-04-07  Steven G. Kargl  <kargls@comcast.net>

	* gfortran.dg/tiny_1.f90: New test.
	* gfortran.dg/tiny_2.f90: ditto.

2005-04-07  Thomas Koenig  <Thomas.Koenig@online.de>

	* gfortran.dg/eor_1.f90:  Fix dg-do run line
	* gfortran.dg/open_new.f90:  Fix dg-do run line

2005-03-12  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/vmx/darwin-abi-3.c: Delete.

2005-04-06  Tobias Schl"uter  <tobias.schlueter@physik.uni-muenchen.de>

	* gfortran.dg/pr15754.f90: Change annotations to dg-error.

2005-04-06  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.dg/weak/weak-12.c, g++.dg/ext/weak2.C: New tests.

2005-04-06  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.dg/i386-387-7.c, gcc.dg/i386-3dnowA-1.c,
	gcc.dg/i386-3dnowA-2.c, gcc.dg/pr12092-1.c: Skip x86 tests for
	-m64.
	* gcc.dg/loop-3.c, gcc.dg/short-compare-1.c,
	gcc.dg/short-compare-2.c, gcc.dg/smod-1.c,
	gcc.dg/torture/badshift.c: Don't give 32-bit options for x86 -m64.

2005-04-06  Mark Mitchell  <mark@codesourcery.com>

	PR c++/20212
	* g++.dg/warn/Wunused-11.C: New test.

2005-04-05  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/20076
	* gcc.dg/builtin-apply4.c: New test.

	PR preprocessor/19475
	* gcc.dg/cpp/macspace1.c: New test.
	* gcc.dg/cpp/macspace2.c: New test.

2005-04-05  Mark Mitchell  <mark@codesourcery.com>

	PR c++/20734